# hyperd-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: 01_basic_usage.py  02_langchain_agent.py  README.md
src/hyperd/: __init__.py  _buyer.py  client.py  langchain.py
tests/: test_client.py
